--- a/Source/BowaXenotypeFollower/BowaXenotypeFollower.csproj
+++ b/Source/BowaXenotypeFollower/BowaXenotypeFollower.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="HarmonyPatcher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ritual\Ritual.cs" />
     <Compile Include="XenotypeFollower.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
