--- a/1.4/Source/BowaXenotypeFollower/BowaXenotypeFollower.csproj
+++ b/1.4/Source/BowaXenotypeFollower/BowaXenotypeFollower.csproj
@@ -70,8 +70,9 @@
     <Compile Include="HarmonyPatcher.cs" />
     <Compile Include="Loader\CustomLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Ritual\Ritual.cs" />
     <Compile Include="GameDataSaveLoader_Patch.cs" />
+    <Compile Include="Ritual\RitualAttachableOutcomeEffectWorker_RandomRecruit_Transpiler.cs" />
+    <Compile Include="Ritual\XenotypeSelector.cs" />
     <Compile Include="Settings\SettingWindow.cs" />
     <Compile Include="Settings\XenotypeFollowerSettings.cs" />
     <Compile Include="XenotypeFollower.cs" />
